--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,12 @@
 <section class="about" id="about">
   <div class="about-img">
-    <img src="../../assets/img/Devices-pana.svg" alt="" class="aboutHero" />
+    <img
+      src="http://drive.google.com/uc?export=view&id=1KDqi3PFSGs6KYhS2iW6n4a1WGxHNo0sR
+"
+      alt=""
+      class="aboutHero"
+    />
+
     <div class="showcase-ring">
       <img src="../assets/shapes/ring.png" class="ring" />
       <img src="../assets/shapes/circle.png" class="circle" />
