--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <h1>Hi I'm Adel</h1>
 
     <div class="text-animate">
-      <h2>Frontend Developer</h2>
+      <h2>MEAN STACK Developer</h2>
     </div>
 
     <p>
@@ -50,7 +50,10 @@
     </div>
   </div>
   <div class="img-hero">
-    <img src="../assets/img/hero.png" alt="" />
+    <img
+      src="http://drive.google.com/uc?export=view&id=1rtGMmHX6YmTr5LPfFzpGxYCrz3h1Mwnm"
+      alt=""
+    />
     <div class="rotate-text">
       <div class="text">
         <p>I'm Youtuber And I'm Frontend Developer And I'm Designer</p>
