--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -56,7 +56,10 @@
         >
       </div>
       <div class="portfolio-img">
-        <img src="../../assets/imgs/e-shop.png" alt="" />
+        <img
+          src="http://drive.google.com/uc?export=view&id=1mlQcNqbgoZrS1N9nN-t6aP4tLDXMWyo9"
+          alt=""
+        />
       </div>
     </div>
 
@@ -72,7 +75,10 @@
         >
       </div>
       <div class="portfolio-img">
-        <img src="../../assets/imgs/movies.png" alt="" />
+        <img
+          src="http://drive.google.com/uc?export=view&id=1ajbjapnY06jkJbLeS6OOZsch0zO-BtGR"
+          alt=""
+        />
       </div>
     </div>
 
@@ -93,7 +99,10 @@
         >
       </div>
       <div class="portfolio-img">
-        <img src="../../assets/imgs/story.png" alt="" />
+        <img
+          src="http://drive.google.com/uc?export=view&id=1gP017Ks8bAYl5vVgZ5bBLUsXg0u5q0mY"
+          alt=""
+        />
       </div>
     </div>
 
@@ -113,7 +122,10 @@
         >
       </div>
       <div class="portfolio-img">
-        <img src="../../assets/imgs/todo.png" alt="" />
+        <img
+          src="http://drive.google.com/uc?export=view&id=1c0ww1TIWj5ICywvBcAuCcH5xxoQrYo1W"
+          alt=""
+        />
       </div>
     </div>
   </div>
