--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -73,7 +73,10 @@
                 <i class="p-3 devicon-html5-plain"></i>
                 <i class="p-3 devicon-css3-plain"></i>
                 <i class="p-3 devicon-javascript-plain"></i>
-                <img src="../../assets/icons/nx-logo.png" alt="" />
+                <img
+                  src="http://drive.google.com/uc?export=view&id=1goIDuJsetIYqu8YmmUJYunAFoo2uJp88"
+                  alt=""
+                />
 
                 <i class="p-3 devicon-mongodb-plain"></i>
                 <i class="p-3 devicon-bootstrap-plain"></i>
@@ -86,7 +89,10 @@
                 <i class="p-3 devicon-html5-plain"></i>
                 <i class="p-3 devicon-css3-plain"></i>
                 <i class="p-3 devicon-javascript-plain"></i>
-                <img src="../../assets/icons/nx-logo.png" alt="" />
+                <img
+                  src="http://drive.google.com/uc?export=view&id=1goIDuJsetIYqu8YmmUJYunAFoo2uJp88"
+                  alt=""
+                />
 
                 <i class="p-3 devicon-mongodb-plain"></i>
                 <i class="p-3 devicon-bootstrap-plain"></i>
