--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <a href="#" class="logo"><span>R</span>ichi</a>
+  <a href="#" class="logo"><span>A</span>del</a>
   <ul class="navlist mt-3">
     <li><a href="#home" class="active">Home</a></li>
     <li><a href="#about">About</a></li>
